if(OS_POSIX)
    add_compiler_flag(-fPIC)
    add_compiler_flag(-pthread)
    add_compiler_flag(-D_FILE_OFFSET_BITS=64)
    add_compiler_flag(-D_TIME_BITS=64)
endif()

if(CXX_MSVC)
    add_compiler_flag(/MP)
    add_compiler_flag(/D_DISABLE_CONSTEXPR_MUTEX_CONSTRUCTOR)
endif()

if(CXX_MSVC)
    foreach(TARGET ${ALL_TARGET_NAMES})
        set(VAR_NAME CMAKE_${TARGET}_LINKER_FLAGS_RELWITHDEBINFO)
        string(REPLACE "/INCREMENTAL" "/INCREMENTAL:NO" ${VAR_NAME} "${${VAR_NAME}}")
        set(${VAR_NAME} "${${VAR_NAME}} /OPT:REF /OPT:ICF")
    endforeach()
endif()

add_subdirectory(extlibs)
add_subdirectory(server)
